solutions/lab6a/ename_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: ingress
spec:
  type: ExternalName
  externalName: webserver.webserver.svc.cluster.local
  ports:
  - port: 8080
    targetPort: 8080
