solutions/lab6a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
  namespace: webserver
spec:
  ingressClassName: nginx
  rules:
  - host: webserver.<WORKER-PUBLIC-IP>.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 8080
