solutions/lab6a/netpol_webserver_original.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webserver-netpol
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    # TODO: allow traffic from the ingress namespace
    ports:
    # TODO: allow TCP traffic to port 8080
